# jax-example-models

./: .gitignore  main.py  pyproject.toml
Econ_models/: Ramsey_Cass_Koopmans.py  rck.py
basic_estimators/: README.md
basic_estimators/bernoulli/: bernoulli  bernoulli.py  bernoulli.stan  bernoulli_data.json  bernoulli_stan.py
basic_estimators/negative_binomial/: negative_binomial  negative_binomial.py  negative_binomial.stan  negative_binomial_stan.py
basic_estimators/negative_binomial2/: negative_binomial2  negative_binomial2.py  negative_binomial2.stan  negative_binomial2_data.json  negative_binomial2_stan.py
basic_estimators/normal_censored/: normal_censored  normal_censored.py  normal_censored.stan  normal_censored_data.json  normal_censored_stan.py
basic_estimators/normal_mixture/: normal_mixture  normal_mixture.py  normal_mixture.stan  normal_mixture_data.json  normal_mixture_stan.py
basic_estimators/normal_mixture_k/: normal_mixture_k  normal_mixture_k.py  normal_mixture_k.stan  normal_mixture_k_data.json  normal_mixture_k_stan.py
basic_estimators/normal_mixture_k_prop/: normal_mixture_k_prop  normal_mixture_k_prop.py  normal_mixture_k_prop.stan  normal_mixture_k_prop_data.json  normal_mixture_k_prop_stan.py
bugs_examples/volume1/blocker/: blocker.py  blocker.stan  blocker_data.json  blocker_init.json
